source sacha inchi viet thai

--- a/app/views/layouts/erp/frontend/welcome.html.erb
+++ b/app/views/layouts/erp/frontend/welcome.html.erb
@@ -16,7 +16,7 @@
 <link rel="icon" href="/sacha_inchi/welcome/images/favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" type="image/x-icon" href="/sacha_inchi/welcome/images/favicon.png" />
 <!-- Page Title Here -->
-<title>GardenZone - Gardning Template</title>
+<title>Công Ty Cổ Phần Sacha - Inchi Việt Thái</title>
 <!-- Mobile Specific -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--[if lt IE 9]>
