--- a/app/views/erp/sacha_inchi/frontend/welcome/index.html.erb
+++ b/app/views/erp/sacha_inchi/frontend/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="page-wraper">
     <!-- Content -->
-    <div id="particles-js" class="overlay-black-middle bg-img-fix dez-coming-soon" style="background-image:url(/sacha_inchi/welcome/images/bg1.jpg);">
+    <div id="particles-js" class="overlay-black-middle bg-img-fix dez-coming-soon" style="background-image:url(/sacha_inchi/welcome/images/background.jpg);">
         <div class="container-fluid " id="mySidenav">
             <!-- Coming Soon -->
             <div class="row">
@@ -86,7 +86,7 @@
                                         <div class="icon-bx-sm bg-primary m-b20"> <a href="#" class="icon-cell"><i class="fa fa-phone"></i></a> </div>
                                         <div class="icon-content">
                                             <h5>Điện thoại</h5>
-                                            <p>+91 564 548 4854</p>
+                                            <p><a href="tel:0906590186">090 659 0186</a></p>
                                         </div>
                                     </div>
                                 </div>
