--- a/app/views/layouts/erp/frontend/welcome.html.erb
+++ b/app/views/layouts/erp/frontend/welcome.html.erb
@@ -13,8 +13,8 @@
 <meta name="description" content="" />
 <meta name="format-detection" content="telephone=no">
 <!-- Favicons Icon -->
-<link rel="icon" href="/sacha_inchi/welcome/images/favicon.ico" type="image/x-icon" />
-<link rel="shortcut icon" type="image/x-icon" href="/sacha_inchi/welcome/images/favicon.png" />
+<!--<link rel="icon" href="/sacha_inchi/welcome/images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" type="image/x-icon" href="/sacha_inchi/welcome/images/favicon.png" />-->
 <!-- Page Title Here -->
 <title>Công Ty Cổ Phần Sacha - Inchi Việt Thái</title>
 <!-- Mobile Specific -->
