--- a/app/views/erp/sacha_inchi/frontend/welcome/index.html.erb
+++ b/app/views/erp/sacha_inchi/frontend/welcome/index.html.erb
@@ -7,11 +7,10 @@
                 <div class="two-box col-md-6">
                     <div class="dez-coming-bx left-bar text-center " id="myNavbar">
                         <div class="dez-coming-bx text-center">
-                            <div class="top-head text-center logo-header">
-                                <a href="<%= erp_sacha_inchi.root_path %>">
-                                    <img src="/sacha_inchi/welcome/images/logo.png" />
-                                </a>
-                            </div>		
+                            <div class="coming-soon-content text-center text-white m-b30">
+                                <h1><%= link_to "CÔNG TY CỔ PHẦN SACHA - INCHI VIỆT THÁI", erp_sacha_inchi.root_path %></h1>                                
+                            </div>
+                            <br><br><br>
                             <div class="coming-soon-content text-center text-white m-b30">
                                 <h2>WEBSITE ĐANG ĐƯỢC PHÁT TRIỂN</h2>
                                 <p>Website Sacha Inchi Việt Thái Đang Được Xây Dựng. Quý Khách Hàng Vui Lòng Quay Lại Sau.</p>
@@ -51,7 +50,7 @@
                             <div class="p-a30 p-t15 text-center">
                                 <h2>GIỚI THIỆU</h2>
                                 <div class="dez-separator bg-primary "></div>
-                                <p class="m-auto">SACHI OMEGA 3.6.9 SIÊU THỰC PHẨM ĐẾN TỪ NAM MỸ</p>
+                                <p class="m-auto product-name">SACHA INCHI OMEGA 3.6.9 SIÊU THỰC PHẨM ĐẾN TỪ NAM MỸ</p>
                             </div>	
                             <div class="clearfix">
                                 <% (0..17).each_with_index do |image, index| %>
@@ -59,7 +58,7 @@
                                 <div class="col-md-6 p-a0">
                                     <div class="dez-media off-color dez-img-effect ">
                                         <a class="fancybox-button" rel="fancybox-button" href="/sacha_inchi/welcome/images/profile/large/<%= index.to_s %>.jpg">
-                                            <img src="/sacha_inchi/welcome/images/profile/small/<%= index.to_s %>-small.jpg" alt="" />
+                                            <img src="/sacha_inchi/welcome/images/profile/small/<%= index.to_s %>.jpg" alt="" />
                                         </a>
                                     </div>
                                 </div>
@@ -78,7 +77,7 @@
                             <div class="p-a30 p-t15 text-center">
                                 <h2>THÔNG TIN LIÊN HỆ</h2>
                                 <div class="dez-separator bg-primary "></div>
-                                <p class="m-auto">CÔNG TY CỔ PHẦN SACHA - INCHI VIỆT THÁI</p>
+                                <p class="m-auto company-name">CÔNG TY CỔ PHẦN SACHA - INCHI VIỆT THÁI</p>
                             </div>
                             <div class="p-lr15 clearfix">
                                 <div class="col-md-4 col-sm-4 m-b30">
