--- a/public/sacha_inchi/welcome/css/custom.css
+++ b/public/sacha_inchi/welcome/css/custom.css
@@ -1,6 +1,30 @@
+.coming-soon-content h1 a {
+    font-size: 36px;
+    font-weight: bold;
+    min-height: 50px;
+    line-height: 50px;
+}
+.coming-soon-content h1 a {
+    color: #fff;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Open Sans";
+}
 .coming-soon-content h2 {
-    font-size: 35px;
+    font-size: 30px;
+    font-family: "Open Sans";
+    font-weight: 600;
+    min-height: 50px;
+    line-height: 50px;
 }
 .text-justify {
     text-align: justify;
+}
+.product-name {
+    font-size: 18px;
+    font-weight: bold;
+}
+.company-name {
+    font-size: 24px;
+    font-weight: bold;
 }
